[package]
name = "async-intro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
futures = "0.3"
bytes = "1.1"
tokio = {version = "1", features = ["full"]}
reqwest = "0.11.6"
mini-redis = "0.4"
